data/derived/fa15/progs/unify/prog2339.ml.out
Characters 77-87:
  else (n mod 10) :: return;
       ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
